Fix : Fix img heigth on iphone in index.css.

--- a/static/index.css
+++ b/static/index.css
@@ -273,3 +273,8 @@ footer{
         padding: 9px;
     }
 }
+
+@media (aspect-ratio: 270/197) {
+    #wrap-attractions > img{
+    }
+}
